[package]
name = "key-x-wasm"
version = "0.1.0"
authors = ["PixelCities"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.63" }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
js-sys = "0.3.55"
uuid = { version = "0.8.2", features = [ "v4", "wasm-bindgen" ]}

aes-gcm-siv = "0.10.1"
argon2 = "0.3"
rand = "0.7.3"
base64 = "0.13"

libsignal-protocol = { path = "./libsignal-client/rust/protocol" }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"

